monitoring/ingress/ingressroute-alertmanager.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress-route
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.local.khider.fr`)
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    secretName: alertmanager-cert
